...
            {attemptsLeft > 0 && (
              <Button
                onPress={handleRequestMembership}
                disabled={isSubmitting}
                loading={isSubmitting}
                className={!modal ? 'mt-4' : ''}
                testID="project-request-access"
              >
                <Text>
                  {isSubmitting ? t('requesting') : t('requestAgain')}
                </Text>
              </Button>
            )}
...
