...
    useEffect(() => {
      if (languoids.length > 0) {
        setLanguoidsLoaded?.(true);
      }
    }, [languoids, setLanguoidsLoaded]);

    const defaultLanguoid = languoids.find((l) => l.name === 'English');

    // Find selected languoid
    const selectedLanguoid = useMemo(() => {
      if (value) {
        return languoids.find((l) => l.id === value);
      }
...
